--- a/manual-data/lemma_overrides.yaml
+++ b/manual-data/lemma_overrides.yaml
@@ -1,11 +1,15 @@
+Ælfġiefe:
+  default: Ælfġiefu
+holte:
+  default: holt
 -μος:
   default: -μος
 -τα-:
   default: -τα-
 …:
   default: …
-'=':
-  default: '='
+"=":
+  default: "="
 C:
   default: C
 D:
@@ -31,7 +35,7 @@ D:
 ἄλλου:
   default: ἄλλος
 ἀνδρῶν:
-  '002': ἀνήρ
+  "002": ἀνήρ
 ἄνευ:
   default: ἄνευ
 ἄπεισιν:
@@ -77,7 +81,7 @@ D:
 Δ:
   default: Δ
 δακρῡ́ω:
-  '003': δακρύω
+  "003": δακρύω
 δέκα:
   default: δέκα
 δεσπότης:
@@ -114,13 +118,13 @@ D:
 δούλων:
   default: δοῦλος
 εἶ:
-  '002': εἰμί
+  "002": εἰμί
   002.4.01.2: εἰμί
   005.2.08.2: εἰμί
 Εἰρήνη:
   default: Εἰρήνη
 Εἰρήνην:
-  '003': Εἰρήνη
+  "003": Εἰρήνη
 Εἰρήνης:
   default: Εἰρήνη
 ἐκείνου:
@@ -154,7 +158,7 @@ D:
 ἤ:
   default: ἤ1
 ἥ:
-  '002': ὁ
+  "002": ὁ
   003.2.26.1: ὁ
   003.3.01.6: ὁ
   003.3.08.3: ὅς
@@ -167,7 +171,7 @@ D:
 ἦν:
   default: εἰμί
 κακῶς:
-  '003': κακός
+  "003": κακός
 καλαί:
   default: καλός
 Κίλισσα:
@@ -193,7 +197,7 @@ D:
 Κωνσταντινούπολις:
   default: Κωνσταντινούπολις
 Λέαινα:
-  '002': Λέαινα
+  "002": Λέαινα
 λέγει:
   default: λέγω3
 λέγεις:
@@ -203,14 +207,14 @@ D:
 λέγουσαι:
   default: λέγω3
 λέγω:
-  '002': λέγω3
-  '003': λέγω3
+  "002": λέγω3
+  "003": λέγω3
 λέγων:
   default: λέγω3
 λέξει:
-  '001': λέξις
+  "001": λέξις
 λέξεις:
-  '001': λέξις
+  "001": λέξις
 Μαρ:
   default: Μάρκος
 Μάρκος:
@@ -238,8 +242,8 @@ D:
 Νάξος:
   default: Νάξος
 ὅ:
-  '002': ὁ
-  '003': ὁ
+  "002": ὁ
+  "003": ὁ
   005.3.03.1: ὁ
 ὁδῷ:
   default: ὁδός2
@@ -306,7 +310,7 @@ D:
 Ῥώμη:
   default: Ῥώμη
 Ῥώμῃ:
-  '002': Ῥώμη
+  "002": Ῥώμη
 σέ:
   default: σύ
 σιγᾷ:
@@ -346,14 +350,14 @@ D:
 τῇ:
   default: ὁ
 τί:
-  '001': τίς
-  '002': τίς
-  '003': τίς
-  '004': τίς
-  '005': τίς
+  "001": τίς
+  "002": τίς
+  "003": τίς
+  "004": τίς
+  "005": τίς
 τίνα:
-  '003': τίς
-  '005': τίς
+  "003": τίς
+  "005": τίς
 τίνες:
   default: τίς
 τίνος:
@@ -384,11 +388,11 @@ D:
 τύπ:
   default: στ
 τῷ:
-  '001': ὁ
-  '002': ὁ
-  '003': ὁ
-  '004': ὁ
-  '005': ὁ
+  "001": ὁ
+  "002": ὁ
+  "003": ὁ
+  "004": ὁ
+  "005": ὁ
 υἱοί:
   default: υἱός
 υἱοῖς:
